--- a/temp1.html
+++ b/temp1.html
@@ -40,8 +40,7 @@
     }
 
     .card,
-.match-card,
-.rest-box {
+.match-card{
   background: white;
   color: black;
   padding: 12px;
@@ -51,6 +50,19 @@
   width: 550px;
   max-width: 95vw;
   box-sizing: border-box;
+}
+.rest-box {
+  background: transparent !important;
+  box-shadow: none !important;
+  border: none !important;
+  width: auto !important;
+  padding: 4px !important;
+  margin: 0 !important;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 6px;
+  justify-content: flex-start;
+  align-items: center;
 }
 
     /* === FORM ELEMENTS === */
