Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/temp1.html
+++ b/temp1.html
@@ -61,6 +61,7 @@
   width: 550px;
   max-width: 95vw;
   box-sizing: border-box;
+  gap: 12px;
 }
 
     /* === FORM ELEMENTS === */
@@ -1464,6 +1465,7 @@ window.addEventListener('beforeunload', function (e) {
 
 </body>
 </html>
+
 
 
 
