--- a/Badschtest.html
+++ b/Badschtest.html
@@ -371,19 +371,478 @@ function AischedulerNextRound() {
 }
 
 /* =========================
+
 DISPLAY & UI FUNCTIONS
+
 ========================= */
-// ... (your existing display functions remain exactly the same) ...
+
+// Main round display
+
+function showRound(index) {
+
+    const resultsDiv = document.getElementById('game-results');
+
+    resultsDiv.innerHTML = '';
+
+    const data = allRounds[index];
+
+    if (!data) return;
+
+    document.getElementById("roundTitle").className = "round-title";
+
+    document.getElementById("roundTitle").innerText = `Round ${data.round}`;
+
+    const restDiv = renderRestingPlayers(data, index);
+
+    const gamesDiv = renderGames(data, index);
+
+    resultsDiv.append(restDiv, gamesDiv);
+
+    document.getElementById('prevBtn').disabled = index === 0;
+
+    document.getElementById('nextBtn').disabled = false;
+
+}
+
+ 
+
+// Resting players display
+
+function renderRestingPlayers(data, index) {
+
+    const restDiv = document.createElement('div');
+
+    restDiv.className = 'round-header';
+
+    const title = document.createElement('div');
+
+    title.innerText = 'Resting:';
+
+    restDiv.appendChild(title);
+
+    const restBox = document.createElement('div');
+
+    restBox.className = 'rest-box';
+
+    if (data.resting.length === 0) {
+
+        const span = document.createElement('span');
+
+        span.innerText = 'None';
+
+        restBox.appendChild(span);
+
+    } else {
+
+        data.resting.forEach(player => {
+
+            restBox.appendChild(makeRestButton(player, data, index));
+
+        });
+
+    }
+
+    restDiv.appendChild(restBox);
+
+    return restDiv;
+
+}
+
+ 
+
+// Games display
+
+function renderGames(data, index) {
+
+    const wrapper = document.createElement('div');
+
+    data.games.forEach((game, gameIndex) => {
+
+        const card = document.createElement('div');
+
+        card.className = 'match-card';
+
+        const teamsDiv = document.createElement('div');
+
+        teamsDiv.className = 'teams';
+
+        const team1 = document.createElement('div');
+
+        team1.className = 'team';
+
+        game.pair1.forEach((p, i) =>
+
+            team1.appendChild(makePlayerButton(p, 'L', gameIndex, i, data, index))
+
+        );
+
+        const vs = document.createElement('span');
+
+        vs.className = 'vs';
+
+        vs.innerText = 'VS';
+
+        const team2 = document.createElement('div');
+
+        team2.className = 'team';
+
+        game.pair2.forEach((p, i) =>
+
+            team2.appendChild(makePlayerButton(p, 'R', gameIndex, i, data, index))
+
+        );
+
+        teamsDiv.append(team1, vs, team2);
+
+        card.appendChild(teamsDiv);
+
+        wrapper.appendChild(card);
+
+    });
+
+    return wrapper;
+
+}
+
+function makePlayerButton(name, teamSide, gameIndex, playerIndex, data, index) {
+
+    const btn = document.createElement('button');
+
+    btn.className = teamSide === 'L' ? 'Lplayer-btn' : 'Rplayer-btn';
+
+    btn.innerText = name;
+
+    btn.draggable = true;
+
+    btn.addEventListener('dragstart', (e) => {
+
+        e.dataTransfer.setData('text/plain', JSON.stringify({
+
+            type: 'team',
+
+            player: name,
+
+            fromTeamSide: teamSide,
+
+            fromGameIndex: gameIndex,
+
+            fromPlayerIndex: playerIndex
+
+        }));
+
+    });
+
+    btn.addEventListener('dragover', (e) => e.preventDefault());
+
+    btn.addEventListener('drop', (e) => {
+
+        const drop = JSON.parse(e.dataTransfer.getData('text/plain'));
+
+        if (drop.type === 'rest') {
+
+            handleDropRestToTeam(e, teamSide, gameIndex, playerIndex, data, index);
+
+        } else if (drop.type === 'team') {
+
+            handleDropBetweenTeams(e, teamSide, gameIndex, playerIndex, data, index);
+
+        }
+
+    });
+
+    return btn;
+
+}
+
+
+    
+function makeRestButton(player, data, index) {
+
+    const btn = document.createElement('button');
+
+    btn.innerText = player;
+
+    btn.className = 'rest-btn';
+
+    btn.draggable = true;
+
+    const match = player.match(/\.?#(\d+)/);
+
+    if (match) {
+
+        const num = parseInt(match[1]);
+
+        const hue = (num * 40) % 360;
+
+        btn.style.backgroundColor = `hsl(${hue}, 65%, 45%)`;
+
+    } else {
+
+        btn.style.backgroundColor = '#777';
+
+    }
+
+    btn.style.color = 'white';
+
+    btn.addEventListener('dragstart', (e) => {
+
+        e.dataTransfer.setData('text/plain', JSON.stringify({ type: 'rest', player }));
+
+    });
+
+    return btn;
+
+}
+
+function handleDropRestToTeam(e, teamSide, gameIndex, playerIndex, data, index) {
+
+    const drop = JSON.parse(e.dataTransfer.getData('text/plain'));
+
+    if (drop.type !== 'rest') return;
+
+    const teamKey = teamSide === 'L' ? 'pair1' : 'pair2';
+
+    const restIndex = data.resting.indexOf(drop.player);
+
+    if (restIndex === -1) return;
+
+    const baseNewPlayer = drop.player.replace(/#\d+$/, '');
+
+    const oldPlayer = data.games[gameIndex][teamKey][playerIndex];
+
+    data.games[gameIndex][teamKey][playerIndex] = baseNewPlayer;
+
+    const { restCount } = schedulerState;
+
+    if (oldPlayer && oldPlayer !== '(Empty)') {
+
+        const cleanOld = oldPlayer.replace(/#\d+$/, '');
+
+        const newCount = (restCount.get(cleanOld) || 0) + 1;
+
+        restCount.set(cleanOld, newCount);
+
+        data.resting[restIndex] = `${cleanOld}#${newCount}`;
+
+    } else {
+
+        data.resting[restIndex] = null;
+
+    }
+
+    restCount.set(baseNewPlayer, Math.max((restCount.get(baseNewPlayer) || 0) - 1, 0));
+
+    data.resting = data.resting.filter(p => p && p !== '(Empty)');
+
+    showRound(index);
+
+}
+
+function handleDropBetweenTeams(e, teamSide, gameIndex, playerIndex, data, index) {
+
+    const drop = JSON.parse(e.dataTransfer.getData('text/plain'));
+
+    if (drop.type !== 'team') return;
+
+    const { fromTeamSide, fromGameIndex, fromPlayerIndex, player } = drop;
+
+    if (!player || player === '(Empty)') return;
+
+    const fromTeamKey = fromTeamSide === 'L' ? 'pair1' : 'pair2';
+
+    const toTeamKey = teamSide === 'L' ? 'pair1' : 'pair2';
+
+    const fromTeam = data.games[fromGameIndex][fromTeamKey];
+
+    const toTeam = data.games[gameIndex][toTeamKey];
+
+    const movedPlayer = player.replace(/#\d+$/, '');
+
+    const targetPlayer = toTeam[playerIndex];
+
+    toTeam[playerIndex] = movedPlayer;
+
+    fromTeam[fromPlayerIndex] = targetPlayer && targetPlayer !== '(Empty)' ? targetPlayer : '(Empty)';
+
+    showRound(index);
+
+}
+
+ 
 
 /* =========================
+
 PAGE NAVIGATION
+
 ========================= */
-// ... (your existing navigation functions remain exactly the same) ...
+
+function goToRounds() {
+
+    const numCourts = parseInt(document.getElementById('num-courts').value);
+
+    if (!players.length || !numCourts) {
+
+        alert('Please add players and number of courts!');
+
+        return;
+
+    }
+
+    if (allRounds.length === 0) {
+
+        initScheduler(players.map(p => p.name), numCourts, fixedPairs);
+
+        allRounds = [AischedulerNextRound()];
+
+        currentRoundIndex = 0;
+
+        showRound(0);
+
+    } else {
+
+        const playersList = players.map(p => p.name);
+
+        schedulerState.players = [...playersList].reverse();
+
+        schedulerState.numCourts = numCourts;
+
+        schedulerState.fixedPairs = fixedPairs;
+
+        schedulerState.fixedMap = new Map();
+
+        let highestRestCount = -Infinity;
+
+        for (const p of playersList) {
+
+            if (schedulerState.restCount.has(p)) {
+
+                const count = schedulerState.restCount.get(p);
+
+                if (count > highestRestCount) highestRestCount = count;
+
+            }
+
+        }
+
+        for (const p of playersList) {
+
+            if (!schedulerState.restCount.has(p)) {
+
+                schedulerState.restCount.set(p, highestRestCount + 1);
+
+            }
+
+        }
+
+        for (const p of Array.from(schedulerState.restCount.keys())) {
+
+            if (!playersList.includes(p)) schedulerState.restCount.delete(p);
+
+        }
+
+        if (currentRoundIndex + 1 <= allRounds.length) {
+
+            showRound(currentRoundIndex);
+
+        } else {
+
+            allRounds.push(AischedulerNextRound());
+
+            currentRoundIndex = currentRoundIndex + 1;
+
+            showRound(currentRoundIndex);
+
+        }
+
+    }
+
+    document.getElementById('page1').style.display = 'none';
+
+    document.getElementById('page2').style.display = 'block';
+
+    isOnPage2 = true;
+
+}
+
+function goBack() {
+
+    const pin = prompt("Enter 4-digit code to go back:");
+
+    if (pin === "0000") {
+
+        document.getElementById('page1').style.display = 'block';
+
+        document.getElementById('page2').style.display = 'none';
+
+        isOnPage2 = false;
+
+    } else if (pin !== null) alert("Incorrect PIN!");
+
+}
+
+function nextRound() {
+
+    if (currentRoundIndex + 1 < allRounds.length) {
+
+        currentRoundIndex++;
+
+        showRound(currentRoundIndex);
+
+    } else {
+
+        const newRound = AischedulerNextRound();
+
+        allRounds.push(newRound);
+
+        currentRoundIndex = allRounds.length - 1;
+
+        showRound(currentRoundIndex);
+
+    }
+
+}
+
+function prevRound() {
+
+    if (currentRoundIndex > 0) {
+
+        currentRoundIndex--;
+
+        showRound(currentRoundIndex);
+
+    }
+
+}
+
+ 
 
 /* =========================
+
 MOBILE BEHAVIOR
+
 ========================= */
-// ... (your existing mobile behavior remains exactly the same) ...
+
+document.addEventListener('touchmove', function (event) {
+
+    if (event.touches.length > 1) {
+
+        event.preventDefault();
+
+    }
+
+}, { passive: false });
+
+window.addEventListener('beforeunload', function (e) {
+
+    e.preventDefault();
+
+    e.returnValue = '';
+
+});
+
 </script>
+
 </body>
+
+    
 </html>
