--- a/testoct23.html
+++ b/testoct23.html
@@ -1134,7 +1134,10 @@ function AischedulerNextRound() {
     pairPlayedSet,
     opponentMap,
   } = schedulerState;
-
+if (players.length / 4 < numCourts) {
+        numCourts = Math.floor(players.length / 4);
+        if (numCourts < 1) numCourts = 1;
+      }
   const totalPlayers = players.length;
   const numPlayersPerRound = numCourts * 4;
   let numResting = Math.max(totalPlayers - numPlayersPerRound, 0);
