--- a/testoct23.html
+++ b/testoct23.html
@@ -573,7 +573,7 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 
     /* Highlight the latest (active) round visually */
 .latest-round .match-card {
-  border: 3px solid #ffcc00;
+  border: 3px solid black;
   box-shadow: 0 0 10px rgba(255, 204, 0, 0.8);
 }
 
@@ -586,7 +586,7 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 /* simple pulsing animation for active buttons */
 @keyframes pulse {
   from { transform: scale(1); opacity: 1; }
-  to { transform: scale(1.1); opacity: 0.85; }
+  to { transform: scale(1.01); opacity: 0.75; }
 }
 
 </style>
@@ -651,7 +651,7 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 
         <div class="card">
 
-            <table id="player-list-table"></table>
+            <table ijd="player-list-table"></table>
 
         </div>
 
