--- a/testoct23.html
+++ b/testoct23.html
@@ -572,10 +572,13 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 }
 
     /* Highlight the latest (active) round visually */
-/* Highlight the latest (active) round visually */
+
+/* ✅ Highlight the latest (active) round visually */
 .latest-round .match-card {
-  border: 2px solid black;
+  border: 2px solid black !important;
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.4);
+  transform: scale(1.01);
+  transition: transform 0.3s ease;
 }
 
 .latest-round .rest-btn,
@@ -584,12 +587,19 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
   animation: subtlePulse 1.5s infinite alternate;
 }
 
-/* subtle pulsing effect for active buttons */
+/* ✅ Subtle pulsing animation for active buttons */
 @keyframes subtlePulse {
-  from { transform: scale(1); opacity: 1; }
-  to { transform: scale(1.01); opacity: 0.95; }
+  from {
+    transform: scale(1);
+    opacity: 1;
+  }
+  to {
+    transform: scale(1.01);
+    opacity: 0.95;
+  }
 }
 
+    
 </style>
 
 </head>
