--- a/testoct24.html
+++ b/testoct24.html
@@ -571,6 +571,26 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 
 }
 
+/* Highlight the latest (active) round visually */
+.latest-round .match-card {
+  border: 2px solid black;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.4);
+}
+
+.latest-round .rest-btn,
+.latest-round .Lplayer-btn,
+.latest-round .Rplayer-btn {
+  animation: subtlePulse 1.5s infinite alternate;
+}
+
+/* subtle pulsing effect for active buttons */
+@keyframes subtlePulse {
+  from { transform: scale(1); opacity: 1; }
+  to { transform: scale(1.01); opacity: 0.95; }
+}
+
+    
+
 </style>
 
 </head>
@@ -1306,8 +1326,35 @@ DISPLAY & UI FUNCTIONS
 ========================= */
 
 // Main round display
-
 function showRound(index) {
+  const resultsDiv = document.getElementById('game-results');
+  resultsDiv.innerHTML = '';
+
+  const data = allRounds[index];
+  if (!data) return;
+
+  document.getElementById("roundTitle").className = "round-title";
+  document.getElementById("roundTitle").innerText = `Round ${data.round}`;
+
+  const restDiv = renderRestingPlayers(data, index);
+  const gamesDiv = renderGames(data, index);
+
+  // ✅ Wrap everything for latest-round distinction
+  const wrapper = document.createElement('div');
+  wrapper.className = (index === allRounds.length - 1) ? 'latest-round' : 'past-round';
+
+  wrapper.append(restDiv, gamesDiv);
+  resultsDiv.append(wrapper);
+
+  document.getElementById('prevBtn').disabled = index === 0;
+  document.getElementById('nextBtn').disabled = false;
+}
+
+
+
+    
+
+function showRound2(index) {
 
     const resultsDiv = document.getElementById('game-results');
 
