--- a/testoct24.html
+++ b/testoct24.html
@@ -574,7 +574,7 @@ h1 { font-size: 20px; margin: 0; font-weight: bold; letter-spacing: 2px; }
 
 /* Highlight the latest (active) round visually */
 .latest-round .match-card {
-  border: 3px solid #ffcc00;
+  border: 3px solid black;
   box-shadow: 0 0 10px rgba(255, 204, 0, 0.8);
 }
 
