--- a/testoct27.html
+++ b/testoct27.html
@@ -1038,6 +1038,34 @@ function initScheduler(playersList, numCourts, fixedPairs = []) {
 }
 
 
+function updateScheduler(playersList, fixedPairs = []) {
+  const samePlayers = schedulerState.players?.length === playersList.length &&
+    schedulerState.players.every(p => playersList.includes(p));
+
+  const sameFixed = JSON.stringify(fixedPairs) ===
+    JSON.stringify(schedulerState.lastFixedPairs);
+
+  if (samePlayers && sameFixed) return; // nothing changed
+
+  schedulerState.players = [...playersList];
+  schedulerState.lastFixedPairs = [...fixedPairs];
+
+  schedulerState.opponentMap = new Map();
+  for (const p1 of playersList) {
+    const inner = new Map();
+    for (const p2 of playersList) if (p1 !== p2) inner.set(p2, 0);
+    schedulerState.opponentMap.set(p1, inner);
+  }
+
+  schedulerState.fixedMap = new Map();
+  for (const [a, b] of fixedPairs) {
+    schedulerState.fixedMap.set(a, b);
+    schedulerState.fixedMap.set(b, a);
+  }
+}
+
+
+    
 function shuffle(array) {
 
     for (let i = array.length - 1; i > 0; i--) {
@@ -1677,7 +1705,8 @@ function goToRounds() {
         schedulerState.fixedMap = new Map();
 
         let highestRestCount = -Infinity;
-
+         updateScheduler(players.map(p => p.name), fixedPairs);
+        
         for (const p of playersList) {
 
             if (schedulerState.restCount.has(p)) {
